# evolution-todo-cloud-native

./: package-lock.json  package.json  test_functionality.py
.claude/commands/: sp.complete.md
history/prompts/001-cli-todo-app/: 006-add-advanced-organization-features.spec.prompt.md  007-update-plan-with-advanced-features.plan.prompt.md  008-tasks-for-all-10-user-stories.tasks.prompt.md  009-implement-cli-todo-application.implement.prompt.md
phase-1-cli/: README.md  pyproject.toml
phase-1-cli/.claude/: settings.local.json
phase-1-cli/src/phase_1_cli/: __init__.py  main.py  main.py.backup
phase-2-web/: README.md  modern_frontend_design_brainstorming.md  package-lock.json  package.json  tailwind.config.js
phase-2-web/src/app/: globals.css  layout.tsx  page.tsx
phase-2-web/src/app/dashboard/: page.tsx
phase-2-web/src/app/landing/: page.tsx
phase-2-web/src/components/: TaskFilters.tsx  TaskForm.tsx  TaskStats.tsx  TaskTable.tsx  index.ts
phase-2-web/src/components/ui/: bento-grid.tsx  button.tsx  glass-card.tsx
phase-2-web/src/hooks/: index.ts  useLocalStorage.ts  useTaskManager.ts
phase-2-web/src/styles/: premium-landing.css
phase-2-web/src/types/: react-three-fiber.d.ts  task.ts
phase-2-web/src/utils/: date.ts
specs/001-cli-todo-app/: data-model.md  plan.md  spec.md
specs/001-cli-todo-app/checklists/: requirements.md
specs/002-web-todo-app/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-web-todo-app/checklists/: requirements.md
